banner image on safari browser corrected

--- a/css/components/_banner.scss
+++ b/css/components/_banner.scss
@@ -3,6 +3,13 @@
 @use "sass:math";
 
 header {
+  background-image: -webkit-linear-gradient(
+      200deg,
+      rgba(237, 235, 235, 0.08167016806722693) 0%,
+      rgba(22, 21, 21, 0.8891491596638656) 50%,
+      rgba(0, 0, 0, 1) 100%
+    ),url("../images/banner.png");
+
   background: linear-gradient(
       260deg,
       rgba(237, 235, 235, 0.08167016806722693) 0%,
